CentOS/Examples/Head/iptables
# Generated by iptables-save v1.4.7 on Sat Dec 28 01:00:02 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [31:6144]
:NFS - [0:0]
:SLURM - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p udp -m udp --dport 69 -j ACCEPT 
-A INPUT -p udp -m udp --dport 68 -j ACCEPT 
-A INPUT -p udp -m udp --dport 67 -j ACCEPT 
-A INPUT -j NFS 
-A INPUT -j SLURM
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -i em2 -o em1 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -i em1 -o em2 -j ACCEPT 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
-A NFS -s 10.1.1.0/24 -p udp -m udp --dport 32769 -j ACCEPT 
-A NFS -s 10.1.1.0/24 -p tcp -m tcp --dport 32803 -j ACCEPT 
-A NFS -s 10.1.1.0/24 -p tcp -m tcp --dport 892 -j ACCEPT 
-A NFS -s 10.1.1.0/24 -p udp -m udp --dport 892 -j ACCEPT 
-A NFS -s 10.1.1.0/24 -p tcp -m tcp --dport 2049 -j ACCEPT 
-A NFS -s 10.1.1.0/24 -p udp -m udp --dport 2049 -j ACCEPT 
-A NFS -s 10.1.1.0/24 -p tcp -m tcp --dport 111 -j ACCEPT 
-A NFS -s 10.1.1.0/24 -p udp -m udp --dport 111 -j ACCEPT 
-A SLURM -s 10.1.1.0/24 -p tcp -m tcp -j ACCEPT 
-A SLURM -s 10.1.1.0/24 -p tcp -m tcp --dport 6818 -j ACCEPT 
-A SLURM -s 10.1.1.0/24 -p tcp -m tcp --dport 6817 -j ACCEPT 
COMMIT
# Completed on Sat Dec 28 01:00:02 2013
# Generated by iptables-save v1.4.7 on Sat Dec 28 01:00:02 2013
*nat
:PREROUTING ACCEPT [456:71298]
:POSTROUTING ACCEPT [2:220]
:OUTPUT ACCEPT [3:336]
-A POSTROUTING -o em2 -j MASQUERADE 
COMMIT
# Completed on Sat Dec 28 01:00:02 2013
